# lut-sample

./: CMakeLists.txt  CMakePresets.json  main.cpp
include/: applyTrilinear.hpp  applyTrilinearHost.hpp
include/eigen3/Eigen/src/Core/: MathFunctions.h
src/: CubeLUT.cpp  CudaUtils.cpp  applyTrilinear.cpp  applyTrilinearGpu.cu  applyTrilinearHost.cpp  main.cpp
